# ME-433

HW10/HW10/: hw10_fir_design_and_application.py  hw10_iir_and_fft_comparison.py  hw10_maf_and_fft_comparison.py  hw10_plot_fft.py  hw10_plot_time.py  hw10_read_csv.py  hw10_sample_rate.py
HW11/: CMakeLists.txt  HW11.c  usb_descriptors.c  usb_descriptors.h
HW12/: CMakeLists.txt  HW12.c  cam.c  cam.h
HW12/python/: read_camera.py
HW12/python/win/: pyvenv.cfg
HW12/python/windows/: pyvenv.cfg
HW13/: CMakeLists.txt  HW13.c  IMG_1212.mov  ssd1306.c  ssd1306.h
HW15/433PCB/: 433PCB.PrjPcb  PCB1.PcbDoc  Sheet1.SchDoc
HW15/433PCB/Project Outputs for 433PCB/: Design Rule Check - PCB1.drc  Design Rule Check - PCB1.html
HW15/433PCB/__Previews/: Sheet1.SchDocPreview
HW16/: CMakeLists.txt  HW16.c
HW17/: CMakeLists.txt  HW17.c  cam.c  cam.h  ov7670_regs.c  ov7670_regs.h
HW18/: CMakeLists.txt  HW18.c  ov7670.h  ov7670_regs.c  ov7670_regs.h
HW18/Python/: camera.py
HW2/hello_gpio_irq/: CMakeLists.txt  hello_gpio_irq.c
HW5/: HW5.c
HW6/: CMakeLists.txt  HW6.c  IMG_1103.mov
HW7/: CMakeLists.txt  HW7.c  IMG_1104.mov
HW8/: CMakeLists.txt  HW8.c  IMG_1105.mov
HW9/: CMakeLists.txt  HW9.c  core1.c  shared.h
Template/: CMakeLists.txt  Template.c
